# a-mighty-oak-tree-cpp

./: CMakeLists.txt  main.cpp
src/: node.hpp  squirrel.hpp
tests/: node_test.cpp
